fix modal scrollbar carreer

--- a/sass/pages/_career.scss
+++ b/sass/pages/_career.scss
@@ -170,6 +170,16 @@
   }
 }
 
+#modalJobs{
+  .modal-body{
+    ul{
+      height: auto;
+      overflow: hidden;
+      max-height: 500px;
+    }
+  }
+}
+
 .modal {
   .modal-body {
     padding: 75px 30px 30px 30px;
@@ -222,7 +232,8 @@
     ul {
       margin: 0 0 35px 0;
       padding: 0;
-      height: auto;
+      max-height: 320px;
+      overflow: hidden scroll;
       li {
         list-style: none;
         position: relative;
